# auto_ml_pressure_gauge

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: train.yaml
data/: README.md
reports/: dataset_quality_report.csv  dataset_quality_report.json  holdout_manifest.json  holdout_metrics.json  monitoring_snapshot.json  test_metrics.json
runs/: README.md
scripts/: docker_run.ps1  docker_run.sh  docker_train.ps1  docker_train.sh  evaluate.ps1  evaluate_holdout.ps1  finetune.ps1  import_roboflow_coco.ps1  infer_holdout_demo.ps1  train_rtx3060.ps1
src/pressure_gauge_ml/: __init__.py  cli.py  config.py  data.py  evaluate.py  hardware.py  infer.py  monitor.py  train.py
tests/: test_config.py  test_dataset.py  test_train_artifacts.py  test_yolo_conversion.py
