[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-ml-pressure-gauge"
version = "0.1.0"
description = "Automated ML pipeline for pressure gauge object detection with RT-DETR and COCO data."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "ultralytics>=8.3.0",
  "torch>=2.2.0",
  "torchvision>=0.17.0",
  "opencv-python-headless>=4.9.0",
  "pillow>=10.0.0",
  "pyyaml>=6.0.1",
  "pandas>=2.0.0",
  "matplotlib>=3.8.0",
  "psutil>=5.9.0",
  "mlflow>=2.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]

[project.scripts]
gauge-ml = "pressure_gauge_ml.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
